modified templates to display posts from db

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -6,11 +6,14 @@
       <div>
 	     <h1><a href="">Django Girls Blog</a></h1>
 	  </div>
-	  <div>
-	     <p>published: 04.07.2017, 16:56</p>
-		 <h2><a href="">My first post</a></h2>
-		 <p>Aenean eu leo quam</p>
-	  </div>
+{% for post in posts %}
+{{posts}}
+<div>
+   <p>published:{{post.published_date}}</p>
+   <h1><a href="">{{post.title}}</a></h1>
+   <p>{{post.text|linebreaksbr}}</p>
+</div>
+{% endfor %}
    </body>
 </html>
 
